[package]
name = "aster-sdk"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "Aster SDK,A wrapper for the Aster API."
keywords = ["trade", "crypto", "aster", "dex", "finance"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/trade-sdk/tree/main/aster-sdk"

[dependencies]
